force-app/main/default/objects/VisMed_Objetivo__c/VisMed_Objetivo__c.object-meta.xml
<CustomObject>
    <description>Objeto en el que se cargarán los objetivos que deberán cumplir los APM.</description>
    <label>Objetivo</label>
    <nameField>
        <label>Nombre de Objetivo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objetivos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>