force-app/main/default/objects/VisMed_Objetivo__c/fields/Dan360_AsignarObjetivo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_AsignarObjetivo__c</fullName>
    <label>Asignar objetivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adultos</fullName>
            </value>
            <value>
                <fullName>Alergia</fullName>
            </value>
            <value>
                <fullName>Nicho</fullName>
            </value>
            <value>
                <fullName>Paeds</fullName>
            </value>
            <value>
                <fullName>Adultos Comunidad</fullName>
                <isActive>false</isActive>
                <label>Adultos Comunidad</label>
            </value>
            <value>
                <fullName>Adultos Comunidad e Instituciones</fullName>
                <isActive>false</isActive>
                <label>Adultos Comunidad e Instituciones</label>
            </value>
            <value>
                <fullName>Adultos Instituciones</fullName>
                <isActive>false</isActive>
                <label>Adultos Instituciones</label>
            </value>
            <value>
                <fullName>Adultos Oncologia Comunidad</fullName>
                <isActive>false</isActive>
                <label>Adultos Oncologia Comunidad</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>