force-app/main/default/objects/VisMed_Objetivo__c/fields/VisMed_DescripcionObjetivo__c.field-meta.xml
<CustomField>
    <fullName>VisMed_DescripcionObjetivo__c</fullName>
    <label>Descripción del objetivo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>