force-app/main/default/objects/VisMed_Objetivo__c/fields/VisMed_FechaFin__c.field-meta.xml
<CustomField>
    <fullName>VisMed_FechaFin__c</fullName>
    <label>Fecha de fin</label>
    <type>Date</type>
</CustomField>