force-app/main/default/objects/VisMed_Objetivo__c/fields/VisMed_FechaInicio__c.field-meta.xml
<CustomField>
    <fullName>VisMed_FechaInicio__c</fullName>
    <label>Fecha de inicio</label>
    <type>Date</type>
</CustomField>