force-app/main/default/objects/VisMed_Objetivo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>VisMed_FechaInicio__c</columns>
    <columns>VisMed_FechaFin__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>