force-app/main/default/objects/VisMed_Objetivo__c/listViews/VisMed_Nicho_VisMed_Objetivo.listView-meta.xml
<ListView>
    <fullName>VisMed_Nicho_VisMed_Objetivo</fullName>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>VisMed_FechaInicio__c</columns>
    <columns>VisMed_FechaFin__c</columns>
    <filterScope>Queue</filterScope>
    <label>Nicho</label>
    <queue>VisMed_Nicho</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>